corrected the spacing between nav bar and the page content.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -134,7 +134,12 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: var(--body-color);
+  /* background-color: var(--body-color); */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.85));
+}
+
+.l-main {
+    padding-top: calc(var(--header-height) + 1.5rem); /* Matches nav height on larger screens */
 }
 
 /* Navigation */
