--- a/static/css/user/show_menu.css
+++ b/static/css/user/show_menu.css
@@ -45,7 +45,7 @@ img {
 
 /*========== CLASS CSS ==========*/
 .section {
-  padding: 5rem 0 3rem;
+  padding: 1rem 0 3rem;
 }
 
 .section-title,
